--- a/bali.html
+++ b/bali.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <header class="hero" style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.6)),url('bali2.jpg') center/cover no-repeat;">
+  <header class="hero" style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.6)),url('bali2.jpg') center/cover no-repeat; height: auto">
     <div class="overlay">
       <h1>Discover Bali</h1>
       <p>Tropical paradise, rich culture & stunning beaches.</p>
