--- a/dubai.html
+++ b/dubai.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <header class="hero" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('dubai2.jpg') center/cover no-repeat;">
+  <header class="hero" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('dubai2.jpg') center/cover no-repeat; height: auto">
     <div class="overlay">
       <h1>Discover Dubai</h1>
       <p>A futuristic desert oasis blending luxury, adventure, and culture.</p>
