--- a/paris.html
+++ b/paris.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <header class="hero" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('paris2.jpg') center/cover no-repeat;">
+  <header class="hero" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('paris2.jpg') center/cover no-repeat; height: auto">
     <div class="overlay">
       <h1>Discover Paris</h1>
       <p>The city of lights, love, and timeless European elegance.</p>
