--- a/paris.html
+++ b/paris.html
@@ -11,7 +11,7 @@
     <div class="overlay">
       <h1>Discover Paris</h1>
       <p>The city of lights, love, and timeless European elegance.</p>
-      <a href="index.html" class="btn">← Back to Home</a>
+      <a href="index.html" class="btn">Back to Home</a>
     </div>
   </header>
 
