--- a/dubai.html
+++ b/dubai.html
@@ -11,7 +11,7 @@
     <div class="overlay">
       <h1>Discover Dubai</h1>
       <p>A futuristic desert oasis blending luxury, adventure, and culture.</p>
-      <a href="index.html" class="btn">← Back to Home</a>
+      <a href="index.html" class="btn">Back to Home</a>
     </div>
   </header>
 
